# libnfc_with_extra_tools

./: CMakeLists.txt  Makefile.am  VS2022Toolchain.cmake  check_file_exists.cmake  configure.ac
cmake/modules/: FindLIBUSB.cmake  LibnfcDrivers.cmake  Makefile.am
contrib/: windows.h
contrib/win32/: Makefile.am  lzma.lib  nfc-list.def  nfc_msvc.def  pthread.lib  pthreadVSE3.lib  stdlib.c  stdlib_compat.h
contrib/win32/libnfc/buses/: uart.c
examples/: CMakeLists.txt  Makefile.am  nfc-anticol.c  nfc-dep-initiator.c  nfc-dep-target.c  nfc-detect-chinese-magic-card.c  nfc-emulate-forum-tag2.c  nfc-emulate-tag.c  nfc-emulate-uid.c  nfc-mfsetuid.c  nfc-poll.c  nfc-relay.c  nfc-st25tb.c  pn53x-diagnose.c  pn53x-sam.c  pn53x-tamashell.c
include/: _ptw32.h
include/libusb-1.0/: libusb.h
include/nfc/: nfc.h
libnfc/: CMakeLists.txt  Makefile.am  conf.c  log.c  nfc-internal.c  nfc-internal.cpp  nfc-internal.h  nfc.c  nfc.cpp  target-subr.cpp
libnfc/buses/: Makefile.am  usbbus.c  usbbus.h
libnfc/chips/: pn53x-internal.h  pn53x.c
libnfc/drivers/: Makefile.am  acr122_pcsc.c  acr122_usb.c  acr122s.c  arygon.c  pcsc.c  pcsc.h  pn532_uart.c  pn53x_usb.c
libusb-1.0/include/: libusb.h
libusb-1.0/lib/msvc_x64/: getopt.lib  libusb-1.0.lib
libusb-1.0/lib/msvc_x64/libusb-1.0 (static)/: libusb-1.0.exp  libusb-1.0.lib
utils/: CMakeLists.txt  Makefile.am  cmdhfmfhard.c  crapto1.c  crapto1.h  mfcuk.c  mfoc.c  nfc-barcode.c  nfc-emulate-forum-tag4.c  nfc-list.c  nfc-mfclassic.c  nfc-mfultralight.c  nfc-read-forum-tag3.c  nfc-relay-picc.c  nfc-scan-device.c  nfc-utils.c  nfc-utils.cpp  nfc-utils.h  parity.h  pthread.h  slre.c  ui.c  util.c  util_posix.c
utils/hardnested/: hardnested_bf_core.c  hardnested_bf_core.h  hardnested_bf_core_NOSIMD.c  hardnested_bitarray_core_NOSIMD.c  hardnested_bruteforce.c  hardnested_bruteforce.h  support.h  tables.h
utils/include/: nfc-mfclassic.h
